Swagger Implementation
Aggiunto Swagger per il debugging, devo risistemare quasi tutto e mi sono accorto che l'API fa schifo, quindi devo riscrivere il codice go e risistemare yaml adattandomi al back-end.
